--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "now-ui-kit-react",
+  "name": "focus",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "moment": "2.24.0",
     "node-sass": "4.12.0",
     "nouislider": "14.0.2",
+    "progressbar.js": "^1.1.0",
     "react": "16.8.6",
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "2.16.3",
@@ -13,7 +14,8 @@
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
-    "reactstrap": "8.0.1"
+    "reactstrap": "8.0.1",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
